--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -214,6 +214,8 @@
     <Compile Include="Patterns\TessellationOnSurface\MiuraFoldingParam.cs" />
     <Compile Include="Patterns\TessellationOnSurface\TessellationOnDoubleSurface.cs" />
     <Compile Include="Patterns\TessellationOnSurface\TessellationParam.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\WaterbombOnDoubleSurface.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\WaterbombParam.cs" />
     <Compile Include="Patterns\TruncatedStarOrigamize.cs" />
     <Compile Include="Patterns\TuckOrigamize.cs" />
     <Compile Include="Patterns\TwistOrigamize.cs" />
