Added HuffmanExtrudedBoxesOnDoubleSurface.cs. Added HuffmanExtrudedBoxesParams.cs.

--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -211,6 +211,8 @@
     <Compile Include="Patterns\DoublyPeriodicTessellation.cs" />
     <Compile Include="Patterns\ExtrudedWaterbombOnDoubleSurface.cs" />
     <Compile Include="Patterns\MiuraFoldingOnDoubleSurface.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\HuffmanExtrudedBoxesOnDoubleSurface.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\HuffmanExtrudedBoxesParams.cs" />
     <Compile Include="Patterns\TessellationOnSurface\MiuraFoldingOnDoubleSurface.cs" />
     <Compile Include="Patterns\TessellationOnSurface\MiuraFoldingParam.cs" />
     <Compile Include="Patterns\TessellationOnSurface\TessellationOnDoubleSurface.cs" />
