Added HuffmanRectWeaveOnDoubleSurface.cs and HuffmanRectWeaveParam.cs.

--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -215,6 +215,8 @@
     <Compile Include="Patterns\MiuraFoldingOnDoubleSurface.cs" />
     <Compile Include="Patterns\TessellationOnSurface\HuffmanExtrudedBoxesOnDoubleSurface.cs" />
     <Compile Include="Patterns\TessellationOnSurface\HuffmanExtrudedBoxesParams.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\HuffmanRectWeaveOnDoubleSurface.cs" />
+    <Compile Include="Patterns\TessellationOnSurface\HuffmanRectWeaveParam.cs" />
     <Compile Include="Patterns\TessellationOnSurface\HuffmanWaterbombsOnDoubleSurface.cs" />
     <Compile Include="Patterns\TessellationOnSurface\HuffmanWaterbombsParam.cs" />
     <Compile Include="Patterns\TessellationOnSurface\MiuraFoldingOnDoubleSurface.cs" />
