--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Components\Patterns\HuffmanRectWeaveOnDoubleSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\HuffmanWaterbombsOnDoubleSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\MiuraFoldingOnDoubleSurfaceComponent2.cs" />
+    <Compile Include="Components\Patterns\HuffmanStarsTrianglesOnDoubleSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\TuckOrigamize.cs" />
     <Compile Include="Components\Patterns\WaterbombOnDoubleSurfaceComponent2.cs" />
     <Compile Include="Components\Solver\CraneAsyncSolver.cs" />
