just added icons.

--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -139,12 +139,10 @@
     <Compile Include="Components\Patterns\ChairComponent.cs" />
     <Compile Include="Components\Patterns\ChickenWireOnSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\DoublyPeriodicTessellationComponent.cs" />
-    <Compile Include="Components\Patterns\ExtrudedWaterbombOnDoubleSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\MapMiuraParameterComponent.cs" />
     <Compile Include="Components\Patterns\StarOrigamizeComponent.cs" />
     <Compile Include="Components\Patterns\TruncatedStarOrigamizeComponent.cs" />
     <Compile Include="Components\Patterns\TwistOrigamizeComponent.cs" />
-    <Compile Include="Components\Patterns\WaterbombOnDoubleSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\YoshimuraPatternOnSurfaceComponent.cs" />
     <Compile Include="Components\Solver\CraneInteractiveSolver.cs" />
     <Compile Include="Components\Solver\CraneStaticSolver.cs" />
@@ -153,8 +151,6 @@
     <Compile Include="Components\Util\DevelopCMesh.cs" />
     <Compile Include="Components\Util\DevelopMesh.cs" />
     <Compile Include="Components\Util\GetFoldAngles.cs" />
-    <Compile Include="Components\Util\GH_CMesh.cs" />
-    <Compile Include="Components\Util\GH_CMeshParam.cs" />
     <Compile Include="Components\Util\MapDev2Fold.cs" />
     <Compile Include="Components\Outputs\WriteFoldFormat.cs" />
     <Compile Include="Components\Util\UnWeldMeshAlongPolylines.cs" />
@@ -373,6 +369,20 @@
     <None Include="Icons\ai\icons_fix_boundary_sector_angle.png" />
     <None Include="Icons\ai\icons_fix_face_normal-64.png" />
     <None Include="Icons\ai\icons_fix_face_normal-65.png" />
+    <None Include="Icons\ai\icons_cal_commutative_trans.png" />
+    <None Include="Icons\ai\icons_deformation_grad.png" />
+    <None Include="Icons\ai\icons_doubly_periodic.png" />
+    <None Include="Icons\ai\icons_haffman_extended_boxes_srf.png" />
+    <None Include="Icons\ai\icons_haffman_extruded_boxes_srf-67.png" />
+    <None Include="Icons\ai\icons_haffman_extruded_boxes_srf-69.png" />
+    <None Include="Icons\ai\icons_haffman_star_triangle_srf.png" />
+    <None Include="Icons\ai\icons_haffman_waterbomb_srf.png" />
+    <None Include="Icons\ai\icons_index_pair_symmetry.png" />
+    <None Include="Icons\ai\icons_map_dev2fold.png" />
+    <None Include="Icons\ai\icons_miura-param.png" />
+    <None Include="Icons\ai\icons_scale_rotation.png" />
+    <None Include="Icons\ai\icons_star_origamize.png" />
+    <None Include="Icons\ai\icons_unweld_polyline.png" />
     <Content Include="Icons\anchor.png" />
     <Content Include="Icons\anchor_to_ground.png" />
     <None Include="Icons\yoshimura.png" />
